WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/BR_Case_CollectAssignments__mdt.object-meta.xml
<CustomObject>
    <description>Used with Flow &quot;Case - Collections Queue Assignment&quot; to handle case assignments based on business rules</description>
    <label>BR - Case - Collect Assignments</label>
    <pluralLabel>BR - Case - Collect Assignments</pluralLabel>
</CustomObject>