WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/Auto_Pay_Self_Cure_DPD__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay_Self_Cure_DPD__c</fullName>
    <description>Value will be number of days to keep a case in the self-cure queue when the customer is enrolled in autopay.</description>
    <label>Auto Pay Self-Cure DPD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>