WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/Balance_Past_Due_3__c.field-meta.xml
<CustomField>
    <fullName>Balance_Past_Due_3__c</fullName>
    <label>Balance Past Due 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>