WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/Balance_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Past_Due__c</fullName>
    <description>Referred to as &quot;AR Balance&quot; in collections documentation</description>
    <label>Balance Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>