WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/Customer_Age__c.field-meta.xml
<CustomField>
    <fullName>Customer_Age__c</fullName>
    <label>Customer Age (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>