WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <label>Days Past Due</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>