WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/DPD_Bucket_3__c.field-meta.xml
<CustomField>
    <fullName>DPD_Bucket_3__c</fullName>
    <label>DPD Bucket 3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>