WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/DPD_Bucket__c.field-meta.xml
<CustomField>
    <fullName>DPD_Bucket__c</fullName>
    <description>Days Past Due Bucket from McKinsey Model</description>
    <label>DPD Bucket</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>