WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/Follow_Up_Date_Increment__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date_Increment__c</fullName>
    <label>Follow Up Date Increment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>