WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/Self_cure_Score__c.field-meta.xml
<CustomField>
    <fullName>Self_cure_Score__c</fullName>
    <label>Self-cure Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>