WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/Small_Balance_Dialer_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Small_Balance_Dialer_Bypass__c</fullName>
    <description>Stored as a dollar amount to control if we set the dialer status to Ready or Removed.
17Aug2020 - if balance is &lt; this amount, and the case is headed to a VaR queue, set the dialer status to Removed, this will prevent us from using agent resources to call on small balance accounts.</description>
    <label>Small Balance Dialer Bypass</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>