WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/VaR_Bad_Rate_2__c.field-meta.xml
<CustomField>
    <fullName>VaR_Bad_Rate_2__c</fullName>
    <label>VaR Bad Rate 2</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>