WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/VaR_Bad_Rate__c.field-meta.xml
<CustomField>
    <fullName>VaR_Bad_Rate__c</fullName>
    <description>Value from McKinsey collections model - referred to as &quot;VaR Bad Prediction&quot; in collections documentation</description>
    <label>VaR Bad Rate</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>