WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/VaR_Prediction__c.field-meta.xml
<CustomField>
    <fullName>VaR_Prediction__c</fullName>
    <description>Value from McKinsey collections model - referred to as &quot;VaR Bad Prediction&quot; in collections documentation</description>
    <label>VaR Prediction</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>