WexGit/Wex_DX/force-app/main/default/objects/BR_Case_CollectAssignments__mdt/fields/VaR_Score__c.field-meta.xml
<CustomField>
    <fullName>VaR_Score__c</fullName>
    <description>Calculated values from Collections model - referred to as &quot;VaR&quot; in McKinsey documentation</description>
    <label>VaR Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>